# web_end_to_end_tests

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_main_page.py
pages/: README.md  base_page.py  locators.py  login_page.py  main_page.py  other_page.py  profile_page.py
pages/patient/: add_hist.py  add_nevus.py  add_patient.py  add_photo.py  base.py  form_patient.py  list_personal.py  patient_profile.py  photo_loader.py
